--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             <p class="text-xl md:text-2xl mb-10 max-w-3xl mx-auto text-gray-200">
                 اختر الباقة التي تناسبك واستمتع بمشاهدة بدون إعلانات، مع التشغيل في الخلفية، وإمكانية التحميل.
             </p>
-            <!-- تم تعديل الزر هنا ليستدعي دالة الجافاسكريبت -->
             <button onclick="scrollToPricing()" class="bg-yellow-400 text-gray-900 font-black py-4 px-10 rounded-full text-xl hover:bg-yellow-300 transform hover:scale-105 transition-all duration-300 shadow-2xl">
                 اطلب باقتك الآن
             </button>
@@ -176,13 +175,11 @@
         const modalTitle = document.getElementById('modalTitle');
         const selectedPlanInput = document.getElementById('selectedPlan');
 
-        // === تم تحديث روابط باي بال بالروابط التي أرسلتها ===
+        // روابط باي بال الخاصة بك
         const paypalUrl_monthly = 'https://www.paypal.com/ncp/payment/9YZZWS9W5ZB9J';
         const paypalUrl_6months = 'https://www.paypal.com/ncp/payment/K84SAATC7FBR6';
         const paypalUrl_yearly = 'https://www.paypal.com/ncp/payment/9VYYJQJXZKVFJ';
-        // =======================================================
 
-        // دالة جديدة للانتقال السلس لقسم الباقات
         function scrollToPricing() {
             document.getElementById('pricing').scrollIntoView({ behavior: 'smooth' });
         }
@@ -202,7 +199,7 @@
         }
 
         async function handleSubmit(event) {
-            event.preventDefault();
+            event.preventDefault(); // منع الإرسال التقليدي
 
             const formData = new FormData(form);
             
@@ -218,16 +215,19 @@
                 });
 
                 if (response.ok) {
+                    // نجح الإرسال: عرض رسالة النجاح وزر الدفع الجديد
                     submitMessage.innerHTML = `
-                        <p class="text-green-400 font-bold text-lg">✅ تم استلام طلبك بنجاح!</p>
+                        <p class="text-green-400 font-bold text-lg">✅ تم استلام بياناتك بنجاح!</p>
                         <p class="text-gray-300 mt-2">الآن، اضغط على الزر أدناه لإتمام عملية الدفع الآمنة.</p>
                         <p class="text-yellow-400 mt-3 font-semibold">ملاحظة: تفعيل الاشتراك قد يستغرق من 3 إلى 24 ساعة بعد تأكيد الدفع.</p>
                     `;
                     submitMessage.classList.remove('hidden');
                     submitMessage.classList.add('bg-gray-700', 'border', 'border-green-400');
 
+                    // إخفاء زر الإرسال الأصلي
                     submitButton.style.display = 'none';
 
+                    // تحديد رابط الدفع الصحيح
                     let paymentUrl = '';
                     if (selectedPlanInput.value.includes('شهري')) {
                         paymentUrl = paypalUrl_monthly;
@@ -237,6 +237,7 @@
                         paymentUrl = paypalUrl_yearly;
                     }
 
+                    // إنشاء وإظهار زر الانتقال للدفع
                     const paymentButton = document.createElement('button');
                     paymentButton.innerText = 'الانتقال إلى صفحة الدفع الآمن';
                     paymentButton.className = 'w-full bg-green-600 text-white font-bold py-3 rounded-lg hover:bg-green-500 transition duration-300 mt-4';
