--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                 ودّع المقاطعات المزعجة<br>
                 <span class="text-yellow-400">استمتع بـ يوتيوب كما يجب</span>
             </h1>
+            
+            <!-- تمت إضافة شعار يوتيوم بريميوم هنا -->
+            <div class="mb-8">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/YouTube_Premium_logo.svg/2048px-YouTube_Premium_logo.svg.png" alt="YouTube Premium Logo" class="w-64 md:w-80 mx-auto opacity-90">
+            </div>
+
             <p class="text-xl md:text-2xl mb-10 max-w-3xl mx-auto text-gray-200">
                 اختر الباقة التي تناسبك واستمتع بمشاهدة بدون إعلانات، مع التشغيل في الخلفية، وإمكانية التحميل.
             </p>
