--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <span class="text-yellow-400">استمتع بـ يوتيوب كما يجب</span>
             </h1>
             
-            <!-- تمت إضافة شعار يوتيوم بريميوم هنا -->
+            <!-- تم تحديث رابط الصورة هنا -->
             <div class="mb-8">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/YouTube_Premium_logo.svg/2048px-YouTube_Premium_logo.svg.png" alt="YouTube Premium Logo" class="w-64 md:w-80 mx-auto opacity-90">
+                <img src="https://i.imgur.com/rGxgR1j.png" alt="YouTube Premium Logo" class="w-64 md:w-80 mx-auto opacity-90">
             </div>
 
             <p class="text-xl md:text-2xl mb-10 max-w-3xl mx-auto text-gray-200">
@@ -165,7 +165,6 @@
                     <label for="phone" class="block text-gray-300 mb-2">رقم الهاتف (مع رمز الدولة)</label>
                     <input type="tel" id="phone" name="phone" required class="w-full px-4 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:border-yellow-400 text-white">
                 </div>
-                <!-- تمت إعادة رسالة التأكيد هنا -->
                 <div id="submitMessage" class="hidden mb-4 p-4 rounded-lg text-center text-sm"></div>
                 <button id="submitButton" type="submit" class="w-full bg-yellow-400 text-gray-900 font-bold py-3 rounded-lg hover:bg-yellow-300 transition duration-300">
                     إرسال الطلب والدفع
