--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
                 <span class="text-yellow-400">استمتع بـ يوتيوب كما يجب</span>
             </h1>
             
-            <!-- تم تحديث رابط الصورة هنا -->
-            <div class="mb-8">
-                <img src="https://i.imgur.com/rGxgR1j.png" alt="YouTube Premium Logo" class="w-64 md:w-80 mx-auto opacity-90">
+            <!-- تم استبدال الشعار بصورة جميلة ومضمونة -->
+            <div class="mb-8 flex justify-center">
+                <div class="relative">
+                    <img src="https://images.unsplash.com/photo-1556656793-08538906a9f8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="شخص يستمتع بمشاهدة الفيديوهات" class="w-48 md:w-64 rounded-lg shadow-2xl">
+                    <div class="absolute inset-0 bg-red-600 bg-opacity-20 rounded-lg flex items-center justify-center">
+                        <span class="text-white font-black text-2xl md:text-3xl">Premium</span>
+                    </div>
+                </div>
             </div>
 
             <p class="text-xl md:text-2xl mb-10 max-w-3xl mx-auto text-gray-200">
@@ -205,16 +210,14 @@
         }
 
         async function handleSubmit(event) {
-            event.preventDefault(); // التحكم الكامل في العملية
+            event.preventDefault();
 
             const formData = new FormData(form);
             
-            // تحديث واجهة المستخدم فوراً
             submitButton.disabled = true;
             submitButton.innerText = '...جاري المعالجة';
             submitMessage.classList.add('hidden');
 
-            // إظهار رسالة النجاح مع وقت التسليم فوراً
             submitMessage.innerHTML = `
                 <p class="text-green-400 font-bold text-lg">✅ تم استلام طلبك بنجاح!</p>
                 <p class="text-gray-300 mt-2">سيتم تحويلك الآن إلى صفحة الدفع الآمن.</p>
@@ -224,7 +227,6 @@
             submitMessage.classList.add('bg-gray-700', 'border', 'border-green-400');
 
             try {
-                // إرسال البيانات إلى Formspree
                 const response = await fetch('https://formspree.io/f/mvgjrdgn', {
                     method: 'POST',
                     body: formData,
@@ -232,7 +234,6 @@
                 });
 
                 if (response.ok) {
-                    // تحديد رابط الدفع الصحيح
                     let paymentUrl = '';
                     if (selectedPlanInput.value.includes('شهري')) {
                         paymentUrl = paypalUrl_monthly;
@@ -242,13 +243,11 @@
                         paymentUrl = paypalUrl_yearly;
                     }
 
-                    // إخفاء زر الإرسال
                     submitButton.style.display = 'none';
 
-                    // التحويل التلقائي بعد فترة قصيرة لقراءة الرسالة
                     setTimeout(() => {
                         window.location.href = paymentUrl;
-                    }, 2500); // 2.5 ثانية
+                    }, 2500);
 
                 } else {
                     throw new Error('فشل في إرسال النموذج.');
